Improve mobile UX and fix layout bugs

--- a/src/app/main-content/portfolio/project-card-mobile/project-card-mobile.component.scss
+++ b/src/app/main-content/portfolio/project-card-mobile/project-card-mobile.component.scss
@@ -123,7 +123,7 @@
 }
 
 .container-content {
-  min-height: max-content;
+  height: max-content;
   background: linear-gradient(
     55.22deg,
     rgb(28, 28, 28) 36.26%,
@@ -131,7 +131,7 @@
   );
   margin: 72px 96px;
   flex-grow: 1;
-  padding: 56px 80px;
+  padding: 48px 56px;
   border: 1px solid rgb(61, 207, 182);
   border-radius: 30px;
   display: flex;
@@ -170,7 +170,6 @@
     > img {
       transition: all 125ms ease-in-out;
       width: 100%;
-      max-width: 500px;
       border-radius: 30px;
       aspect-ratio: 4 / 3;
       margin-bottom: 32px;
@@ -243,43 +242,50 @@
     }
   }
 
-  > .btns-container {
-    display: flex;
-    align-items: center;
-    gap: 32px;
-    height: 48px;
+  > .three-btns-container {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-    > a {
-      text-decoration: none;
-      color: white;
-      font-family: "Karla";
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 21.6px;
-      border: 1px solid white;
-      border-radius: 30px;
-      padding: 12px 24px;
-      transition: all 125ms ease-in-out;
+      > .btns-container {
+      display: flex;
+      align-items: center;
+      gap: 32px;
+      height: 48px;
+      width: max-content;
 
-      &:hover {
-        color: rgb(61, 207, 182);
-        border-color: rgb(61, 207, 182);
+      > a {
+        text-decoration: none;
+        color: white;
+        font-family: "Karla";
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 21.6px;
+        border: 1px solid white;
+        border-radius: 30px;
+        padding: 12px 24px;
+        transition: all 125ms ease-in-out;
 
-        img {
-          transform: translateX(8px) translateY(-6px);
+        &:hover {
+          color: rgb(61, 207, 182);
+          border-color: rgb(61, 207, 182);
+
+          img {
+            transform: translateX(8px) translateY(-6px);
+          }
+        }
+
+        > img {
+          width: 10px;
+          height: 10px;
+          transition: all 125ms ease-in-out;
         }
       }
-
-      > img {
-        width: 10px;
-        height: 10px;
-        transition: all 125ms ease-in-out;
-      }
     }
-  }
 
-  > .next-btn-container {
-    width: 100%;
+    > .next-btn-container {
+    width: max-content;
     display: flex;
     justify-content: flex-end;
 
@@ -290,7 +296,6 @@
       align-items: center;
       height: 40px;
       margin-right: 10px;
-      margin-top: 26px;
       color: rgb(61, 207, 182);
       font-family: "Karla";
       font-size: 18px;
@@ -317,6 +322,7 @@
         transition: all 125ms ease-in-out;
       }
     }
+  }
   }
 }
 
@@ -363,9 +369,14 @@
 }
 
 @media (max-width: 858px) {
+
   .container-content {
     margin: 16px 16px;
     padding: 16px 12px;
+
+    > .close-icon-container {
+      margin-bottom: 8px;
+    }
   }
 }
 
@@ -397,15 +408,59 @@
   }
 }
 
-@media (max-width: 350px) {
-  .container-content {
+@media (max-width: 520px) {
+  .container-content > .three-btns-container {
+    flex-direction: column;
+
     > .btns-container {
+      width: 100%;
+      justify-content: space-between;
+      margin-bottom: 16px;
+      gap: 8px;
+
+      > a {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        > img {
+          margin-left: 10px;
+        }
+      }
+    }
+
+    > .next-btn-container {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      > button {
+        width: 100%;
+        border: 1px solid rgb(61, 207, 182);
+        border-radius: 30px;
+        padding: 24px 0px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
+
+        &:hover {
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 350px) {
+  .container-content > .three-btns-container > .btns-container {
       gap: 0;
       justify-content: space-between;
 
       > a {
-        padding: 11px 22px;
+        padding: 8px 14px;
       }
     }
-  }
 }
